apps/team3-matnani/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matnani-api
  labels:
    app: matnani-api
spec:
  type: ClusterIP
  selector:
    app: matnani-api
  ports:
    - name: http
      port: 8080
      targetPort: http
